# CameraControl

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  debug.keystore  gradle.properties  local.properties  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/cpp/: native-lib.cpp
app/src/androidTest/java/com/ahmedmamdouh13/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/ahmedmamdouh13/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/ahmedmamdouh13/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
